Remove MaxPermSize from JAVA_OPTS
OpenJDK 64-Bit Server VM warning: Ignoring option MaxPermSize; support was removed in 8.0